cloudformation/vpc-simple-freetier/django-resources.cfn.json
{
  "AWSTemplateFormatVersion": "2010-09-09",

  "Description": "Provision resource dependencies for the testproject app (e.g., RDS, S3, DynamoDB, etc..), then app on AWS Elastic Beanstalk via the django-eb-app substack.",

  "Parameters": {

    "DatabaseUser": {
      "Default": "admin",
      "NoEcho": "true",
      "Type": "String",
      "Description": "Database admin account name",
      "MinLength": "1",
      "MaxLength": "16",
      "AllowedPattern": "[a-zA-Z][a-zA-Z0-9]*",
      "ConstraintDescription": "must begin with a letter and contain only alphanumeric characters."
    },
    "DatabasePassword": {
      "Default": "0bee082a464",
      "NoEcho": "true",
      "Type": "String",
      "Description": "Database admin account password",
      "MinLength": "1",
      "MaxLength": "41",
      "AllowedPattern": "[a-zA-Z0-9]*",
      "ConstraintDescription": "must contain only alphanumeric characters."
    },
    "DatabaseName": {
      "Description": "The name of the database",
      "Type": "String",
      "Default": " amediamanager"
    },
    "DatabaseInstanceType" : {
      "Description" : "RDS DB instance type",
      "Default": "db.t2.micro",
      "Type" : "String",
      "AllowedValues" : [
        "db.t2.micro",
        "db.t2.small",
        "db.t2.medium",
        "db.t2.large",
        "db.m3.medium",
        "db.m3.large",
        "db.m3.xlarge",
        "db.m3.2xlarge",
        "db.r3.large",
        "db.r3.xlarge",
        "db.r3.2xlarge",
        "db.r3.4xlarge",
        "db.r3.8xlarge"
      ]
    },
    "CacheInstanceType" : {
      "Description" : "RDS DB instance type",
      "Default": "cache.t2.micro",
      "Type" : "String",
      "AllowedValues" : [
        "cache.t2.micro",
        "cache.t2.small",
        "cache.t2.medium",
        "cache.m3.medium",
        "cache.m3.large",
        "cache.m3.xlarge",
        "cache.m3.2xlarge",
        "cache.r3.large",
        "cache.r3.xlarge",
        "cache.r3.2xlarge",
        "cache.r3.4xlarge",
        "cache.r3.8xlarge"
      ]
    },
    "InstanceSecurityGroup" : {
      "Description" : "A VPC Security Group ID that has ingress access to a NAT instance in the VPC. EB instances will be launched into this group.",
      "Type": "String"
    },
    "VPCId" : {
      "Description" : "A VPC ID.",
      "Type": "String"
    },
    "PrivateSubnet1" : {
      "Description" : "A private VPC subnet ID.",
      "Type": "String"
    },
    "PrivateSubnet2" : {
      "Description" : "A private VPC subnet ID. Must be in a different AZ than PrivateSubnet1",
      "Type": "String"
    },
    "PublicSubnet1" : {
      "Description" : "A public VPC subnet ID.",
      "Type": "String"
    },
    "PublicSubnet2" : {
      "Description" : "A public VPC subnet ID. Must be in a different AZ than PublicSubnet1",
      "Type": "String"
    }
  },

  "Resources": {
    "AppBucket": {
      "Type": "AWS::S3::Bucket"
    },

    "CacheSubnetGroup" : {
        "Type" : "AWS::ElastiCache::SubnetGroup",
        "Properties" : {
            "Description" : "Cache Subnet Group",
            "SubnetIds": [{
              "Ref": "PrivateSubnet1"
            }, {
              "Ref": "PrivateSubnet2"
            }]
        }
    },

    "CacheParameters" : {
          "Type" : "AWS::ElastiCache::ParameterGroup",
          "Properties" : {
            "CacheParameterGroupFamily" : "memcached1.4",
            "Description" : "Parameter group",
            "Properties" : {
              "cas_disabled" : "1"
            }
          }
        },

        "CacheSecurityGroup" : {
          "Type" : "AWS::EC2::SecurityGroup",
          "Properties" : {
            "GroupDescription" : "Allow access to the cache from the Web Server",
            "VpcId" : { "Ref" : "VPCId" },
            "SecurityGroupIngress": [{
              "IpProtocol": "tcp",
              "FromPort": "0",
              "ToPort": "65535",
              "SourceSecurityGroupId": {
                "Ref": "InstanceSecurityGroup"
              }
            }],
            "SecurityGroupEgress": [{
              "IpProtocol": "tcp",
              "FromPort": "0",
              "ToPort": "65535",
              "SourceSecurityGroupId": {
                "Ref": "InstanceSecurityGroup"
              }
            }]
          }      
        },  

        "CacheCluster" : {
          "Type": "AWS::ElastiCache::CacheCluster",
          "Properties": {
            "CacheSubnetGroupName" : { "Ref" : "CacheSubnetGroup" },
            "CacheNodeType"        : { "Ref" : "CacheInstanceType" },
            "VpcSecurityGroupIds"  : [ { "Ref" : "CacheSecurityGroup" } ],
            "Engine"               : "memcached",
            "NumCacheNodes"        : "2"
          }
        },

    "DBSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Allow the Elastic Beanstalk instances to access the RDS database",
        "VpcId": {
          "Ref": "VPCId"
        },
        "SecurityGroupIngress": [{
          "IpProtocol": "tcp",
          "FromPort": "3306",
          "ToPort": "3306",
          "SourceSecurityGroupId": {
            "Ref": "InstanceSecurityGroup"
          }
        }],
        "SecurityGroupEgress": [{
          "IpProtocol": "tcp",
          "FromPort": "3306",
          "ToPort": "3306",
          "CidrIp": "0.0.0.0/0"
        }]
      }
    },

    "DBSubnetGroup": {
      "Type": "AWS::RDS::DBSubnetGroup",
      "Properties": {
        "DBSubnetGroupDescription": "RDS DB Subnet group",
        "SubnetIds": [{
          "Ref": "PrivateSubnet1"
        }, {
          "Ref": "PrivateSubnet2"
        }]
      }
    },

    "Database": {
      "Type": "AWS::RDS::DBInstance",
      "Properties": {
        "Engine": "Postgresql",
        "DBName": {
          "Ref": "DatabaseName"
        },
        "MasterUsername": {
          "Ref": "DatabaseUser"
        },
        "DBInstanceClass": {
          "Ref": "DatabaseInstanceType"
        },
        "AllocatedStorage": "5",
        "MasterUserPassword": {
          "Ref": "DatabasePassword"
        },
        "VPCSecurityGroups": [{
          "Ref": "DBSecurityGroup"
        }],
        "DBSubnetGroupName": {
          "Ref": "DBSubnetGroup"
        }
      }
    }
  },
  "Outputs": {
    "InstanceSecurityGroup": {
      "Value": {"Ref": "InstanceSecurityGroup"}
    },
    "RdsDbId": {
       "Value" : { "Ref" : "Database" }
    },
    "CacheEndpoint": { 
      "Value": { "Fn::GetAtt" : [ "CacheCluster", "ConfigurationEndpoint.Address" ]}
    },
    "CachePort": { 
      "Value" : {"Fn::GetAtt" : [ "CacheCluster", "ConfigurationEndpoint.Port" ]}
    },
    "AppBucket": {
      "Value": { "Ref" : "AppBucket"}
    },
    "DatabaseUser":{
      "Value": { "Ref" : "DatabaseUser"}
    },
    "DatabasePassword": {
      "Value": { "Ref" : "DatabasePassword" }
    },
    "InstanceSecurityGroup": {
      "Value": { "Ref" : "InstanceSecurityGroup" }
    }
  }
}
